<?xml version="1.0"?>
<package format="3">
  <name>aruco_msgs</name>
  <version>5.0.4</version>
  <description>The aruco_msgs package</description>
  <maintainer email="sai.kishor@pal-robotics.com">Sai Kishor Kothakota</maintainer>
  <author email="bence.magyar@pal-robotics.com">Bence Magyar</author>
  <license>MIT</license>

  <url type="website">https://github.com/pal-robotics/aruco_ros</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
