<?xml version="1.0"?>
<package format="3">
  <name>aruco_ros</name>
  <version>5.0.4</version>
  <description>
    The ARUCO Library has been developed by the Ava group of the Univeristy of Cordoba(Spain).
    It provides real-time marker based 3D pose estimation using AR markers.
  </description>
  <maintainer email="sai.kishor@pal-robotics.com">Sai Kishor Kothakota</maintainer>
  <license>MIT</license>
  <url type="website">http://www.uco.es/investiga/grupos/ava/node/26</url>
  <author email="rmsalinas@uco.es">Rafael Muñoz Salinas</author>
  <author email="bence.magyar@pal-robotics.com">Bence Magyar</author>

  <url type="website">https://github.com/pal-robotics/aruco_ros</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>image_transport</depend>
  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>aruco</depend>
  <depend>aruco_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
